<resources>
    <string name="app_name">Class Selection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginHint">Enter a username &#8230;</string>
    <string name="passwordHint">Enter password &#8230;</string>
    <string name="loginButtonText">Login</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="day">Day</string>
    <string name="year">Year</string>

    <string name="errMessageLogin">Invalid login. Please retry.</string>
    <string name="errMessagePassword">Invalid password. Please retry.</string>
    <string-array name="monthList">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="cert">Certificates</string>
    <string name="degree">Associates Degree</string>
    <string name="major">Major</string>

    <string name="nextButton">Next</string>

    <string-array name="certificatesList">
        <item>Android Certificate</item>
        <item>iOS Certificate</item>
    </string-array>

    <string-array name="majorsList">
        <item>Digital Media</item>
        <item>Mobile Application Development</item>
        <item>Web Development</item>
    </string-array>

</resources>